--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,42 +1,3 @@
-html {
-  scroll-behavior: smooth;
-}
-
-p:empty {
-  display: none !important;
-}
-
-.hidden {
-  display: none;
-}
-
-.animated {
-  animation-duration: 1s;
-  animation-fill-mode: both;
-}
-
-.fadeIn {
-  animation-name: fadeIn;
-}
-
-<<<<<<< HEAD
-strong {
-  font-weight: 700;
-}
-
-h1,
-h2,
-h3,
-h4 {
-  font-stretch: 80%;
-}
-
-=======
->>>>>>> 3a47a477aeb1151ea1a0714ac89098cdd0bcae86
-.fadeOut {
-  animation-name: fadeOut;
-}
-
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -53,62 +14,6 @@ h4 {
     opacity: 0;
   }
 }
-:root :where(.wp-site-blocks) > * {
-  margin-block-start: 0 !important;
-  margin-block-end: 0;
-}
-
-.wp-site-blocks > * {
-  margin-block-start: 0 !important;
-}
-
-@media screen and (prefers-reduced-motion: reduce) {
-  html {
-    scroll-behavior: auto;
-  }
-}
-body {
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-}
-
-@media (max-width: 480px) {
-  .mobile-less-stretch {
-    font-stretch: 65%;
-  }
-}
-a {
-  text-underline-offset: 3px;
-}
-
-.wp-block-navigation__container a {
-  text-decoration: underline;
-  text-underline-offset: 3px;
-}
-@charset "UTF-8";
-.border {
-  position: relative;
-  padding: 5px 0 0 0;
-  box-sizing: border-box;
-  overflow: hidden;
-  background-color: #021330;
-  animation: color-animation 50s linear infinite;
-}
-.border::before {
-  content: "";
-  display: block;
-  background: linear-gradient(90deg, #5B5B66 30%, transparent 30%, transparent 75%, #5B5B66 75%);
-  animation: gradient-animation 330s linear infinite;
-  background-size: 20px;
-  position: absolute;
-  top: -1000px;
-  left: -50px;
-  bottom: -1000px;
-  right: -50px;
-  transform: rotate(45deg);
-  overflow: hidden;
-}
-
 @keyframes gradient-animation {
   0% {
     background-position: 0% 50%;
@@ -119,49 +24,96 @@ a {
 }
 @keyframes color-animation {
   0% {
-    background-color: #021330;
+    background-color: var(--wp--preset--color--accent);
   }
   50% {
-    /*             background-color: #ae0e55; */
-    background-color: #6c6c83;
+    background-color: var(--wp--preset--color--accent-3);
   }
   100% {
-    background-color: #021330;
+    background-color: var(--wp--preset--color--accent);
+  }
+}
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-stretch: 80%;
+}
+
+strong {
+  font-weight: 700;
+}
+
+a {
+  text-underline-offset: var(--wp--preset--spacing--tiny, 3px);
+}
+
+.hidden {
+  display: none !important;
+}
+
+p:empty {
+  display: none !important;
+}
+
+.animated {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+}
+
+.fadeIn {
+  animation-name: fadeIn;
+}
+
+.fadeOut {
+  animation-name: fadeOut;
+}
+
+:root :where(.wp-site-blocks) > *,
+.wp-site-blocks > * {
+  margin-block-start: 0 !important;
+  margin-block-end: 0;
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
+  html {
+    scroll-behavior: auto;
+  }
+}
+@media (max-width: 480px) {
+  .mobile-less-stretch {
+    font-stretch: 65%;
   }
 }
 .site-header {
   position: relative;
   z-index: 9;
 }
-
-.wp-site-blocks {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+@media (min-width: 782px) {
+  .site-header .wp-block-greenshift-blocks-container {
+    margin-bottom: calc(-1 * var(--wp--preset--spacing--xxx-large)) !important;
+    z-index: 999;
+  }
+}
+.site-header nav .wp-block-navigation__submenu-container {
+  padding: var(--wp--preset--spacing--medium) var(--wp--preset--spacing--medium) var(--wp--preset--spacing--medium) var(--wp--preset--spacing--medium);
+  left: var(--wp--preset--spacing--medium);
 }
 
-/* WordPress spezifisch */
-.admin-bar .wp-site-blocks {
-  min-height: calc(100vh - 32px);
-}
-
-/* der Footer-Hintergrund setzt sich nach unten hin fort */
 .wp-site-blocks > .site-footer {
   flex: 1;
-  display: flex;
-  /* ggf. noch hintergrundfarbe geben, 
-<<<<<<< HEAD
-  * da diese erst über den container definiert sein dürfte
-  */
   background: var(--wp--preset--color--contrast);
-=======
-   * da diese erst über den container definiert sein dürfte
-   */
-}
-
-.wp-site-blocks > .site-footer > * {
-  flex: 1;
->>>>>>> 3a47a477aeb1151ea1a0714ac89098cdd0bcae86
 }
 
 #menu-icon {
@@ -172,17 +124,15 @@ a {
   fill: var(--wp--preset--color--accent);
 }
 
-.page-heading {
-  background-color: #000 !important;
-}
-
-.site-header nav .wp-block-navigation__submenu-container {
-  padding: 0 !important;
-}
-
 .wp-block-navigation__responsive-container.is-menu-open {
   max-width: 100%;
-  padding: 2rem 10%;
+  padding: var(--wp--preset--spacing--medium) 10%;
+}
+.wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content .wp-block-navigation__submenu-container {
+  padding-top: 0 !important;
+}
+.wp-block-navigation__responsive-container:not(.has-background).is-menu-open {
+  opacity: 0.95 !important;
 }
 
 .wp-block-navigation__responsive-container-content .wp-block-navigation > ul {
@@ -190,12 +140,8 @@ a {
   padding-top: 0;
 }
 
-.wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content .wp-block-navigation__submenu-container {
-  padding-top: 0 !important;
-}
-
-.wp-block-navigation:not(.has-background) .wp-block-navigation__responsive-container.is-menu-open {
-  opacity: 0.95 !important;
+.wp-block-cover.page-heading {
+  background-color: var(--wp--preset--color--contrast);
 }
 
 .blog .site-header + main > .wp-block-query,
@@ -210,35 +156,24 @@ a {
   justify-content: space-between;
 }
 
-.wp-block-post-excerpt__more-text a:hover {
-  background-color: var(--wp--preset--color--accent);
-  color: var(--wp--preset--color--base);
-}
-
 .wp-block-term-description {
   margin-top: 0;
 }
-
 .wp-block-term-description p {
-  margin: 0.5em auto;
+  margin: var(--wp--preset--spacing--tiny) auto;
 }
 
-@media (min-width: 782px) {
-  .site-header .wp-block-greenshift-blocks-container {
-    margin-bottom: -120px !important;
-    z-index: 999;
-  }
-}
 #gototop {
   height: 28px;
   width: 28px;
-  padding: 5px;
-  background-color: var(--wp--preset--color--accent-4);
+  padding: var(--wp--preset--spacing--tiny);
+  background-color: var(--wp--preset--color--accent);
   text-align: center;
   position: fixed;
-  right: 15px;
-  bottom: 15px;
+  right: var(--wp--preset--spacing--small);
+  bottom: var(--wp--preset--spacing--small);
   z-index: 999;
+  transition: background-color 0.3s ease;
 }
 #gototop svg {
   height: auto;
@@ -260,24 +195,15 @@ a {
 #gototop a::before:hover {
   color: var(--wp--preset--color--base) !important;
 }
-#gototop:hover {
-  background-color: var(--wp--preset--color--tertiary);
-}
 @charset "UTF-8";
 img,
 svg {
   max-width: 100%;
   height: auto;
 }
-<<<<<<< HEAD
 
 blockquote p {
   font-stretch: 130%;
-}
-
-.website-title {
-  -webkit-clip-path: polygon(10% 10%, 46% 1%, 44% 15%, 100% 0, 95% 90%, 31% 100%, 32% 90%, 0 100%);
-  clip-path: polygon(10% 10%, 46% 1%, 44% 15%, 100% 0, 95% 90%, 31% 100%, 32% 90%, 0 100%);
 }
 
 .wp-block-cover {
@@ -305,32 +231,39 @@ blockquote p {
   text-decoration: underline;
 }
 
-:root :where(.wp-element-button, .wp-block-button__link) {
-  border-radius: 1px !important;
+/** korrigiert "überlaufen" von einer blockgruppe über den html-rand hinaus - bug? hinzugefügt am 22.01.2025*/
+.wp-block-categories .wp-block-categories__label {
+  width: auto;
 }
 
+.wp-block-categories .wp-block-categories__label.screen-reader-text {
+  width: 1px;
+}
+
+/* :root :where(.wp-element-button, .wp-block-button__link) {
+    border-radius: 1px !important;
+} */
 /** old blog */
 html {
   scroll-behavior: smooth;
 }
 
-.is-style-main-navigation .wp-block-navigation__responsive-container:not(.is-menu-open) .wp-block-navigation__container > .wp-block-navigation-item .wp-block-navigation__submenu-container .wp-block-navigation-item .wp-block-navigation-item__content {
-  padding: 0.35rem 1rem !important;
+/* .is-style-main-navigation .wp-block-navigation__responsive-container:not(.is-menu-open) .wp-block-navigation__container>.wp-block-navigation-item .wp-block-navigation__submenu-container .wp-block-navigation-item .wp-block-navigation-item__content {
+    padding: 0.35rem 1rem !important;
 }
 
 .wp-block-post-title:not(:hover) a {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 .wp-block-post-date {
-  font-size: 14px;
-  text-transform: uppercase;
+    font-size: 14px;
+    text-transform: uppercase;
+} */
+/* .wp-block-navigation ul {
+    padding: 0 !important;
 }
-
-.wp-block-navigation ul {
-  padding: 0 !important;
-}
-
+ */
 /*
 li.wp-block-post {
 	position:relative;
@@ -719,18 +652,14 @@ main {
     margin-left: 1%;
   }
 }
-=======
->>>>>>> 3a47a477aeb1151ea1a0714ac89098cdd0bcae86
 form .columns {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-top: 19px;
-  margin-bottom: 19px;
+  margin: var(--wp--preset--spacing--medium) 0;
 }
 form .columns p {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 form .columns-2 > * {
@@ -745,17 +674,7 @@ form .columns-2.einszwei > *:last-child {
   flex-basis: 69%;
 }
 
-@media (max-width: 460px) {
-  form .columns {
-    flex-direction: column;
-  }
-  form .columns-2.einszwei > *:first-child,
-  form .columns-2.einszwei > *:last-child,
-  form .columns-2 > * {
-    flex-basis: 100%;
-  }
-}
-.is-style-outline.is-style-outline.wp-block-button .wp-block-button__link:hover {
+.is-style-outline.wp-block-button .wp-block-button__link:hover {
   background-color: var(--wp--preset--color--accent);
   color: var(--wp--preset--color--base);
   border-color: var(--wp--preset--color--accent);
@@ -763,15 +682,15 @@ form .columns-2.einszwei > *:last-child {
 
 input[type=submit] {
   background-color: var(--wp--preset--color--base);
-  border-radius: 2px;
-  padding: 12px 25px;
-  border: solid 2px var(--wp--preset--color--accent);
+  border-radius: 10px;
+  padding: var(--wp--preset--spacing--small) var(--wp--preset--spacing--medium);
+  border: 2px solid var(--wp--preset--color--accent);
   color: var(--wp--preset--color--accent);
   font-family: var(--wp--preset--font-family--roboto-flex);
   font-size: var(--wp--preset--font-size--normal);
-  font-style: normal;
   font-weight: 400;
   cursor: pointer;
+  transition: all 0.3s ease;
 }
 input[type=submit]:hover {
   background-color: var(--wp--preset--color--accent);
@@ -783,24 +702,37 @@ input:not([type=radio]):not([type=checkbox]):not([type=submit]):not([type=button
 select,
 textarea {
   width: 100%;
-  padding: 12px 15px;
-  border: solid 2px var(--wp--preset--color--base-3);
-  border-radius: 2px;
+  border: 1px solid var(--wp--preset--color--base-3);
+  border-radius: 10px;
   box-sizing: border-box;
+  padding: var(--wp--preset--spacing--small);
   font-family: var(--wp--preset--font-family--roboto-flex);
+  font-size: var(--wp--preset--font-size--normal);
   background-color: var(--wp--preset--color--base-2);
+  transition: border-color 0.3s ease;
 }
 input:not([type=radio]):not([type=checkbox]):not([type=submit]):not([type=button]):not([type=image]):not([type=file]):focus, input:not([type=radio]):not([type=checkbox]):not([type=submit]):not([type=button]):not([type=image]):not([type=file]):focus-visible,
 select:focus,
 select:focus-visible,
 textarea:focus,
 textarea:focus-visible {
-  border: 2px solid var(--wp--preset--color--accent) !important;
+  border-color: var(--wp--preset--color--accent) !important;
   outline: none !important;
 }
 
 .wpcf7-submit {
   width: 100%;
+}
+
+@media (max-width: 460px) {
+  form .columns {
+    flex-direction: column;
+  }
+  form .columns-2.einszwei > *:first-child,
+  form .columns-2.einszwei > *:last-child,
+  form .columns-2 > * {
+    flex-basis: 100%;
+  }
 }
 
 @media (min-width: 600px) and (max-width: 960px) {
