--- a/style.css
+++ b/style.css
@@ -1,18 +1,15 @@
 /*
-Theme Name: aspexion
-Author: aspexion
-Author URI: https://blog.aspexion.at
-Theme URI: https://aspexion.at
+Theme Name: webentwicklerin
+Author: webentwicklerin
+Author URI: https://blog.webentwicklerin.at
+Theme URI: https://webentwicklerin.at
 Tags: full-site-editing, editor-style, block-styles, block-patterns
-Text Domain: aspexion
+Text Domain: webentwicklerin
 Requires at least: 6.3
 Requires PHP: 7.4
 Tested up to: 6.4
-<<<<<<< HEAD
-Version: 2025-01-21
-=======
-Version: 2024-01-22
->>>>>>> 3a47a477aeb1151ea1a0714ac89098cdd0bcae86
+Theme Support: block-templates
+
 
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
