--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,8 @@
-<<<<<<< HEAD
 <!-- wp:template-part {"slug":"header","theme":"webentwicklerin","tagName":"header","className":"site-header"} /-->
-=======
-<!-- wp:template-part {"slug":"header","theme":"aspexion","tagName":"header","className":"site-header"} /-->
->>>>>>> 3a47a477aeb1151ea1a0714ac89098cdd0bcae86
 
-<!-- wp:group {"tagName":"main","style":{"spacing":{"padding":{"top":"0","bottom":"0","left":"var:preset|spacing|20","right":"var:preset|spacing|20"},"margin":{"top":"0","bottom":"0"},"blockGap":"var:preset|spacing|30"}},"layout":{"type":"constrained"}} -->
+<!-- wp:group {"tagName":"main","style":{"spacing":{"padding":{"top":"var:preset|spacing|120","bottom":"var:preset|spacing|120"}}},"layout":{"type":"constrained"}} -->
 <main class="wp-block-group"
-	style="margin-top:0;margin-bottom:0;padding-top:0;padding-right:var(--wp--preset--spacing--20);padding-bottom:0;padding-left:var(--wp--preset--spacing--20)">
+	style="padding-top:var(--wp--preset--spacing--120);padding-bottom:var(--wp--preset--spacing--120)">
 	<!-- wp:term-description /-->
 
 	<!-- wp:query {"queryId":2,"query":{"perPage":10,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":true},"layout":{"type":"constrained"}} -->
@@ -44,8 +40,4 @@
 </main>
 <!-- /wp:group -->
 
-<<<<<<< HEAD
 <!-- wp:template-part {"slug":"footer","theme":"webentwicklerin","tagName":"footer","className":"site-footer"} /-->
-=======
-<!-- wp:template-part {"slug":"footer","theme":"aspexion","tagName":"footer","className":"site-footer"} /-->
->>>>>>> 3a47a477aeb1151ea1a0714ac89098cdd0bcae86
