--- a/templates/single.html
+++ b/templates/single.html
@@ -1,8 +1,8 @@
-<!-- wp:template-part {"slug":"header","theme":"aspexion","tagName":"header","className":"site-header"} /-->
+<!-- wp:template-part {"slug":"header","theme":"webentwicklerin","tagName":"header","className":"site-header"} /-->
 
-<!-- wp:group {"tagName":"main","style":{"spacing":{"padding":{"top":"var:preset|spacing|large","bottom":"var:preset|spacing|large","left":"var:preset|spacing|small","right":"var:preset|spacing|small"},"blockGap":"var:preset|spacing|small"}},"layout":{"type":"constrained"}} -->
+<!-- wp:group {"tagName":"main","style":{"spacing":{"padding":{"top":"var:preset|spacing|120","bottom":"var:preset|spacing|120"}}},"layout":{"type":"constrained"}} -->
 <main class="wp-block-group"
-	style="padding-top:var(--wp--preset--spacing--large);padding-right:var(--wp--preset--spacing--small);padding-bottom:var(--wp--preset--spacing--large);padding-left:var(--wp--preset--spacing--small)">
+	style="padding-top:var(--wp--preset--spacing--120);padding-bottom:var(--wp--preset--spacing--120)">
 	<!-- wp:post-title /-->
 
 	<!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|small"}},"layout":{"type":"flex","allowOrientation":false}} -->
@@ -18,7 +18,7 @@
 
 	<!-- wp:post-content {"align":"full","layout":{"type":"constrained"}} /-->
 
-	<!-- wp:template-part {"slug":"comments","theme":"aspexion"} /-->
+	<!-- wp:template-part {"slug":"comments","theme":"webentwicklerin"} /-->
 
 	<!-- wp:group {"layout":{"type":"flex","justifyContent":"space-between","flexWrap":"wrap"}} -->
 	<div class="wp-block-group">
@@ -30,4 +30,4 @@
 </main>
 <!-- /wp:group -->
 
-<!-- wp:template-part {"slug":"footer","theme":"aspexion","tagName":"footer","className":"site-footer"} /-->
+<!-- wp:template-part {"slug":"footer","theme":"webentwicklerin","tagName":"footer","className":"site-footer"} /-->
