--- a/templates/template-plain.html
+++ b/templates/template-plain.html
@@ -1,3 +1,6 @@
-<!-- wp:group {"tagName":"main","style":{"spacing":{"padding":{"top":"var:preset|spacing|0","bottom":"var:preset|spacing|0"}}},"layout":{"type":"constrained"}} -->
-<!-- wp:post-content {"align":"full","layout":{"type":"constrained"}} /-->
+<!-- wp:group {"tagName":"main","style":{"spacing":{"padding":{"top":"var:preset|spacing|0","bottom":"var:preset|spacing|0"}}},"layout":{"type":"default"}} -->
+<main class="wp-block-group"
+    style="padding-top:var(--wp--preset--spacing--0);padding-bottom:var(--wp--preset--spacing--0)">
+    <!-- wp:post-content {"align":"full","layout":{"type":"constrained"}} /-->
+</main>
 <!-- /wp:group -->
