Refactor: Remove debugging functions from functions.php
Build: Update gulpfile.js for improved deployment process and add dry-run functionality

Update: Modify webentwicklerin.pot for new translation strings and update creation date

Dependencies: Add rsync as a dependency in package.json and package-lock.json

Style: Adjust form element styles in SCSS for consistency

Meta: Update theme version and tested up to version in style.css

Cleanup: Remove debugging.php file and add .deploy-hashes.json for deployment tracking

--- a/scss/04-form-elements.scss
+++ b/scss/04-form-elements.scss
@@ -29,9 +29,9 @@ form .columns-2.einszwei>*:last-child {
 
 input[type="submit"] {
     background-color: var(--wp--preset--color--base);
-    border-radius: 10px;
+    border-radius: 2px;
+    border: 1px solid var(--wp--preset--color--accent);
     padding: var(--wp--preset--spacing--small) var(--wp--preset--spacing--medium);
-    border: 2px solid var(--wp--preset--color--accent);
     color: var(--wp--preset--color--accent);
     font-family: var(--wp--preset--font-family--roboto-flex);
     font-size: var(--wp--preset--font-size--normal);
@@ -51,9 +51,9 @@ select,
 textarea {
     width: 100%;
     border: 1px solid var(--wp--preset--color--base-3);
-    border-radius: 10px;
+    padding: var(--wp--preset--spacing--small) var(--wp--preset--spacing--medium);
+    border-radius: 2px;
     box-sizing: border-box;
-    padding: var(--wp--preset--spacing--small);
     font-family: var(--wp--preset--font-family--roboto-flex);
     font-size: var(--wp--preset--font-size--normal);
     background-color: var(--wp--preset--color--base-2);
