--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@ Tags: full-site-editing, editor-style, block-styles, block-patterns
 Text Domain: webentwicklerin
 Requires at least: 6.3
 Requires PHP: 7.4
-Tested up to: 6.4
-Theme Support: block-templates
-
+Tested up to: 6.7
+version: 2025.03.15
+Description: webentwicklerin is a theme for full site editing with block styles and block patterns. 
 
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
