Enhancement: Update theme structure and functionality
- Updated .babelrc to include WordPress preset configuration.
- Modified .gitignore to include gulpfile.js and sitemap.xml.gz.
- Refactored functions.php to include new icon generation and block registration functionalities.
- Improved SVG handling with sanitization and validation in filters.php.
- Updated package.json and package-lock.json for new dependencies and versioning.
- Enhanced gulpfile.js with new tasks for building blocks and generating icons.
- Updated theme.json and style.css for compatibility with WordPress 6.5 and PHP 8.0.
- Removed unused SVG files and deprecated styles.
- Cleaned up SCSS files for better organization and readability.

--- a/assets/css/editor-style.css
+++ b/assets/css/editor-style.css
@@ -1,6 +1,9 @@
-
 @charset "UTF-8";
 .editor-styles-wrapper {
+  /* 
+  .wp-block-cover.page-heading {
+      background-color: var(--wp--preset--color--contrast);
+  } */
   /** korrigiert "überlaufen" von einer blockgruppe über den html-rand hinaus - bug? hinzugefügt am 22.01.2025*/
   /* :root :where(.wp-element-button, .wp-block-button__link) {
       border-radius: 1px !important;
@@ -126,9 +129,6 @@
 .editor-styles-wrapper .wp-block-navigation__responsive-container-content .wp-block-navigation > ul {
   margin-top: 0;
   padding-top: 0;
-}
-.editor-styles-wrapper .wp-block-cover.page-heading {
-  background-color: var(--wp--preset--color--contrast);
 }
 .editor-styles-wrapper .blog .site-header + main > .wp-block-query,
 .editor-styles-wrapper .page .site-header + main > .wp-block-columns,
