--- a/scss/02-template-parts.scss
+++ b/scss/02-template-parts.scss
@@ -52,10 +52,10 @@
         padding-top: 0;
     }
 }
-
+/* 
 .wp-block-cover.page-heading {
     background-color: var(--wp--preset--color--contrast);
-}
+} */
 
 .blog .site-header+main>.wp-block-query,
 .page .site-header+main>.wp-block-columns,
