--- a/templates/archive.html
+++ b/templates/archive.html
@@ -10,9 +10,8 @@
 		<!-- wp:pattern {"slug":"webentwicklerin/hidden-no-results"} /-->
 		<!-- /wp:query-no-results -->
 
-		<!-- wp:group {"style":{"spacing":{"padding":{"top":"var:preset|spacing|50","bottom":"var:preset|spacing|50","left":"0","right":"0"},"margin":{"top":"0","bottom":"0"}}},"layout":{"type":"default"}} -->
-		<div class="wp-block-group"
-			style="margin-top:0;margin-bottom:0;padding-top:var(--wp--preset--spacing--50);padding-right:0;padding-bottom:var(--wp--preset--spacing--50);padding-left:0">
+		<!-- wp:group {"className":"is-style-no-margin"} -->
+		<div class="wp-block-group is-style-no-margin">
 
 			<!-- wp:post-template {"align":"full","style":{"spacing":{"blockGap":"var:preset|spacing|30"}},"layout":{"type":"grid","columnCount":3}} -->
 
